--- a/source/styles.css
+++ b/source/styles.css
@@ -3,14 +3,17 @@ body {
   margin: 0;
   font: 10px sans-serif;
 
-  width: 400px;
-/*  height: 300px;*/
-  height: 1000px;
+  width: 600px;
+  height: 300px;
 
   background-color: transparent;
+  color: #ddd;
+  font-weight: 300;
 }
 
 #container {
+  position: relative;
+
   background: #212121; /* Old browsers */
   background: -moz-linear-gradient(top,  #212121 0%, #494949 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#212121), color-stop(100%,#494949)); /* Chrome,Safari4+ */
@@ -23,7 +26,7 @@ body {
   border-radius: 10px;
   border: 1.5px solid white;
 
-  width: 397px;
+  width: 597px;
   height: 297px;
 }
 
@@ -49,3 +52,19 @@ text {
   stroke-width: 1.5px;
 }
 
+#readout {
+  width: 180px;
+  height: 280px;
+  position: absolute;
+  top: 40px;
+  right: 0px;
+}
+
+#last-price {
+  font-size: 24px;
+  padding-bottom: 10px;
+}
+#ask-price, #bid-price {
+  font-size: 18px;
+  padding-bottom: 10px;
+}
