--- a/source/styles.css
+++ b/source/styles.css
@@ -3,8 +3,8 @@ body {
   margin: 0;
   font: 10px sans-serif;
 
-  width: 600px;
-  height: 300px;
+  width: 630px;
+  height: 330px;
 
   background-color: transparent;
   color: #ddd;
@@ -12,7 +12,10 @@ body {
 }
 
 #container {
-  position: relative;
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  box-shadow: 8px 8px 10px rgba(0,0,0,.3);
 
   background: #212121; /* Old browsers */
   background: -moz-linear-gradient(top,  #212121 0%, #494949 100%); /* FF3.6+ */
